--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.poetryPath": "C:\\\\Users\\\\m.giritharan\\\\AppData\\\\Roaming\\\\Python\\\\Scripts\\\\poetry.exe"
+    "python.poetryPath": "C:\\\\Users\\\\m.giritharan\\\\AppData\\\\Roaming\\\\Python\\\\Scripts\\\\poetry.exe",
+    "zencoder.enableRepoIndexing": true
 }
